# fsrapiclient

./: CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
docs/sources/: api-reference.rst  contributing.rst  fs-register-api.rst  getting-started.rst  usage.rst
docs/sources/fsrapiclient/: api.rst  constants.rst  exceptions.rst
src/fsrapiclient/: api.py  constants.py  exceptions.py
tests/units/: test_api.py  test_constants.py
