[project]

# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/

# For the standard reference on Python packaging, including using
# ``pyproject.toml`` for build definition and configuration see:
#
#     https://packaging.python.org/en/latest/tutorials/packaging-projects/
#
name = "fsrapiclient"
description = "Lightweight Python client library for the UK Financial Services Register (FSR) RESTful API"

authors = [
    {name = "S. R. Murthy", email = "s.murthy@tutanota.com"},
]

maintainers = [
  {name = "S. R. Murthy", email = "s.murthy@tutanota.com"}
]

dynamic = ["version"]

requires-python = ">=3.10"

license = {text = "MPL"}

dependencies = [
    "requests",
]

readme = "README.md"

keywords = [
    "authorised firm",
    "financial conduct authority",
    "financial data",
    "financial services register",
    "prudential regulation authority",
    "regulated firm",
    "restful api",
]

classifiers = [
        "Environment :: Console",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Development Status :: 5 - Production/Stable",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS",
        "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
user = [
    "jupyter",
]

[project.scripts]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
Homepage = "https://github.com/sr-murthy/fsrapiclient"
Documentation = "https://github.com/sr-murthy/fsrapiclient"
Repository = "https://github.com/sr-murthy/fsrapiclient"

# For working with PDM, including configuration and usage see:
#
#     https://pdm.fming.dev/latest/
#     https://pdm.fming.dev/latest/reference/pep621/
#     https://pdm.fming.dev/latest/reference/cli/
#
[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = [
    "src/fsrapiclient",
]
# File patterns to exclude, the paths are relative to the project root.
excludes = [
    "docs",
    "build",
    "dist",
    "tests",
    ".pytest_cache",
    "*.pyc",
    "*.env",
    "*__pycache__*",
]
source-includes = [
    "README.md",
]
editable-backend = "path"

[tool.pdm.dev-dependencies]
build = [
    "pip>=23.1.2",
]
dev = [
    "dotenv",
    "pytest",
    "pytest-cov",
    "coverage",
    "ipython",
    "ipdb",
    "virtualenv",
]
lint = [
    "ruff",
]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[tool.pdm.scripts]
lint = {shell = "make lint", help = "Lint source with Ruff"}
doctests = {shell = "make doctests", help = "Run doctests"}
unittests = {shell = "make unittests", help = "Run unit tests & measure coverage"}

[tool.pdm.version]
source = "file"
path = "src/__version__.py"

# For ``pytest`` configuration, including TOML-specific configuration see:
#
#     https://docs.pytest.org/en/7.3.x/reference/customize.html#configuration
#     https://docs.pytest.org/en/7.3.x/reference/customize.html#pyproject-toml
#

[tool.pytest.ini_options]
pythonpath = "src"
addopts = """\
    --cache-clear \
    --code-highlight=yes \
    --color=yes \
    --cov=src \
    --cov-config=pyproject.toml \
    --cov-report=xml \
    --cov-report=html \
    --dist worksteal \
    --numprocesses=auto \
    -ra \
    --tb=native \
    --verbosity=3 \
"""
filterwarnings = [
    "ignore::DeprecationWarning"
]
python_files = ["test_*.py",]
python_classes = ["Test", "Acceptance",]
python_functions = ["test"]
testpaths = [
    "tests/",
]
markers = [
    # Test tags/labels/markers - not using any currently
]

# For ``coverage`` configuration see the reference from version ``7.4.1``:
#
#     https://coverage.readthedocs.io/en/7.4.1/config.html
#
[tool.coverage.run]
branch = true
omit = [
    "./build",
    "./dist",
    "./docs",
    "*/tests*",
    ".pytest_cache",
    "*.pyc",
    "*.env",
    "*__pycache__*",
    "__version__.py"
]
source = ["src"]

[tool.coverage.report]
precision = 3
show_missing = true
skip_covered = true
skip_empty = true
sort = "Name"
